--- a/game/src/index.css
+++ b/game/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+.bg{
+    background-color: #222831;
+    font-family: Kaisei Decol;
+    font-weight: lighter;
+    color: #FFD369;
+}
+
+
+/* to import fonts here  */
+
+@media (min-width: 1024px){
+    .navbar {
+      display: inline-flex !important;
+    }
+  }
